k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: todo-frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: todo-frontend

  template:
    metadata:
      labels:
        app: todo-frontend

    spec:
      containers:
        - name: frontend
          image: k8s-todo-frontend:v5
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          
          livenessProbe:
            httpGet:
              path: /
              port: 80

          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            
            limits:
              cpu: 500m
              memory: 128Mi
