k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment


metadata:
  name: todo-auth

spec:
  replicas: 2

  selector:
    matchLabels:
      app: todo-auth
  template:
    metadata:
      labels:
        app: todo-auth
    spec:
      containers:
      - name: auth
        image: k8s-todo-auth:v1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5002
---
apiVersion: v1
kind: Service

metadata:
  name: todo-auth

spec:
  selector:
    app: todo-auth
  ports:
    - port: 5002
      targetPort: 5002
  type: ClusterIP
