k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: todo-backend
  
spec:
  selector:
    app: todo-backend

  ports:
    - port: 5001
      targetPort: 5001
  
  type: ClusterIP
