k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: todo-gateway

spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-gateway

  template:
    metadata:
      labels:
        app: todo-gateway
    spec:
      containers:
        - name: gateway
          image: k8s-todo-gateway:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-gateway
spec:
  selector:
    app: todo-gateway
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
