k8s/mongodb.yaml
#k8s/mongodb.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongodb

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongodb
  
  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: mongodb
          image: mongo:8

          ports:
            - containerPort: 27017
          
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
      
      volumes:
        - name: mongodb-storage

          persistentVolumeClaim:
            claimName: mongodb-pvc

---
apiVersion: v1
kind: Service

metadata:
  name: mongodb

spec:
  selector:
    app: mongodb
  
  ports:
    - port: 27017
      targetPort: 27017
