k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: todo-redis

spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-redis
  template:
    metadata:
      labels:
        app: todo-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: todo-redis

spec:
  selector:
    app: todo-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
