k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: todo-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: todo.app.com

      http:
        paths:
          - path: /api 
            pathType: Prefix 

            backend:
              service:
                name: todo-gateway
                port:
                  number: 5000
                
          - path: /
            pathType: Prefix

            backend:
              service:
                name: todo-frontend
                port:
                  number: 80
